# cats_dogs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.dvc/: config
.github/workflows/: pre-commit.yml
conf_hydra/: config_infer.yaml  config_train.yaml  hydra_conf.py
conf_hydra/data/: catdog_data.yaml
conf_hydra/img_transforms/: config_transforms.yaml
conf_hydra/mlflow/: mlflow_local.yaml
conf_hydra/model/: fcnn.yaml
data/: .gitignore  inference.dvc
ds_project/: data_loader.py  fcnn.py  flatten.py  infer.py  inference_dataset.py  metrics_utils.py  train.py  train_test_utils.py  utils.py
